--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
         </div>
         <!-- Burger Icon for Mobile -->
         <i class="fa fa-bars burger" id="burger" aria-hidden="true"></i>
+        <!-- Profile Image Toggle for Mobile -->
+        <img
+          src="/assets/images/KaveeN.jpg"
+          class="profile-img-toggle"
+          id="profile-img-toggle"
+          alt="Profile Image"
+        />
       </div>
     </header>
 
@@ -469,18 +476,6 @@
       <p class="copyright">&copy; 2025 Dimantha KaveeN. All rights reserved.</p>
     </footer>
 
-    <script>
-      const burger = document.getElementById("burger");
-      const profileSidebar = document.getElementById("profile-sidebar");
-      const closeBtn = document.getElementById("btn-close");
-
-      burger.addEventListener("click", () => {
-        profileSidebar.classList.add("active");
-      });
-
-      closeBtn.addEventListener("click", () => {
-        profileSidebar.classList.remove("active");
-      });
-    </script>
+    <script src="/js/Responsive.js"></script>
   </body>
 </html>
