--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="stylesheet/resumepage.css" />
     <link rel="stylesheet" href="stylesheet/workpage.css" />
     <link rel="stylesheet" href="stylesheet/contactpage.css" />
+    <link rel="stylesheet" href="stylesheet/nightmode.css" />
   </head>
   <body>
     <!-- Header -->
@@ -114,15 +115,6 @@
           <i class="fab fa-facebook"></i>
         </a>
         <a
-          href="https://x.com/kaveen_69"
-          class="social-link"
-          target="_blank"
-          rel="noopener noreferrer"
-          aria-label="Twitter Profile"
-        >
-          <i class="fab fa-x-twitter"></i>
-        </a>
-        <a
           href="https://www.linkedin.com/in/dimantha-kaveen-a843092b5"
           class="social-link"
           target="_blank"
@@ -139,6 +131,15 @@
           aria-label="GitHub Profile"
         >
           <i class="fab fa-github"></i>
+        </a>
+        <a
+          href="https://discord.com/invite/a89fFSSpzy"
+          class="social-link"
+          target="_blank"
+          rel="noopener noreferrer"
+          aria-label="Discord Server"
+        >
+          <i class="fa-brands fa-discord"></i>
         </a>
       </nav>
 
@@ -477,5 +478,7 @@
     </footer>
 
     <script src="/js/Responsive.js"></script>
+    <script src="/js/portfolio.js"></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
